@@ -4,12 +4,25 @@
         <artifactId>me.chris.bear-parent</artifactId>
         <groupId>me.chris</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../me.chris.bear-parent</relativePath>
+        <relativePath>../bear-parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>me.chris.bear-common</artifactId>
     <name>Bear common</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
 
